fix: added text-overflow for long movie title

--- a/movie-catalog/src/pages/MovieGrid.css
+++ b/movie-catalog/src/pages/MovieGrid.css
@@ -33,6 +33,8 @@
 .movies-container div h2,
 .movies-container div p {
   margin-bottom: 0.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .movies-container div svg {
